--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pirabaa Segar</title>
+    <title>The Best Place to Find Movies, TV Shows, People - Cinemax</title>
     <meta name="description"
-        content="I'm a freelance developer and designer with a passion for creating great user experiences.">
+    content="Explore Cinemax, your ultimate online cinematic hub! Discover a vast array of movies, TV shows, and actor profiles. Dive into trailers, synopses, and more!">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/eurofighter" rel="stylesheet">
 </head>
   <body>
     <div id="root"></div>
