--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Best Place to Find Movies, TV Shows, People - Cinemax</title>
+    <meta name="theme-color" content="#1a1a1a" />
+    <title>Cinemax - Discover Movies and TV Shows all in one place!</title>
     <meta name="description"
-    content="Explore Cinemax, your ultimate online cinematic hub! Discover a vast array of movies, TV shows, and actor profiles. Dive into trailers, synopses, and more!">
+    content="Explore Cinemax, your ultimate online cinematic hub! Discover a vast array of movies, and TV shows. Dive into trailers, synopses, and more!">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
