--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#1a1a1a" />
+  <meta name="theme-color" content="#111" />
   <meta name="description"
     content="Explore Cinemax, your ultimate online cinematic hub! Discover a vast array of movies, and TV shows. Dive into trailers, synopses, and more!">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
